<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/colorBlue"
    android:gravity="bottom"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:paddingStart="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dateText"
            android:layout_width="200dp"
            android:layout_height="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/currency_date"
            android:textColor="@android:color/background_light"
            android:textSize="10sp"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/euroText"
            android:layout_width="200dp"
            android:layout_height="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/currency_euro_view"
            android:textColor="@android:color/background_light"
            android:textSize="10sp"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/dollarText"
            android:layout_width="200dp"
            android:layout_height="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="12dp"
            android:text="@string/currency_dollar_view"
            android:textColor="@android:color/background_light"
            android:textSize="10sp"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/myDebtText"
            android:layout_width="200dp"
            android:layout_height="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/first_text_view"
            android:textColor="@android:color/background_light"
            android:textSize="10sp"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/yourDebtText"
            android:layout_width="200dp"
            android:layout_height="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/second_text_view"
            android:textColor="@android:color/background_light"
            android:textSize="10sp"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/budgetText"
            android:layout_width="200dp"
            android:layout_height="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/third_text_view"
            android:textColor="@android:color/background_light"
            android:textSize="10sp"
            android:layout_marginStart="8dp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/money"
        android:contentDescription="@string/todo_text" />

</LinearLayout>
